welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: not found: type boolean
var fini:boolean=false
         ^BDR2:2: error: not found: type string
var message:string=""
            ^BDR2:17: error: not found: value drotie
		case"R" => drotie()
                           ^